# data_model_tmp

./: README.md  mkdocs.yml  pyproject.toml  registry.py  todo_on_transfer.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/: CODEOWNERS
.github/scripts/: compute_version_bump.py  excel_diff.py  post_pr_comment.mjs
.github/workflows/: build_publish_docs.yml  check_excel_changes.yml  docs.yml  main_post_merge.yml
create_docs/: registry.py
data/assumptions/: entsoe_tyndp_ntc.yaml  scenass_aviation_fuel_demand.yaml  scenass_biomass_potential.yaml  scenass_cost_generation_technologies.yaml  scenass_cost_heating_technologies.yaml  scenass_cost_storage_technologies.yaml  scenass_electric_appliances_useful_energy_demand.yaml  scenass_energy_reference_area.yaml  scenass_freight_transport_useful_energy_demand.yaml  scenass_gdp.yaml  scenass_hdd.yaml  scenass_households.yaml  scenass_import_prices.yaml  scenass_passenger_transport_useful_energy_demand.yaml  scenass_population.yaml  scenass_process_heat_useful_energy_demand.yaml  scenass_space_heating_useful_energy_demand.yaml  scenass_warm_water_useful_energy_demand.yaml  scenass_working_population.yaml
data/dimensions/: CHANGELOG.md  dim_building.yaml  dim_endusesector.yaml  dim_fuel.yaml  dim_iso_region.yaml  dim_model.yaml  dim_resource.yaml  dim_scenario.yaml  dim_tech_generation.yaml  dim_tech_heat.yaml  dim_tech_hydrogen.yaml  dim_tech_liquids.yaml  dim_tech_methane.yaml  dim_tech_storage.yaml  dim_trn_mode_freight.yaml  dim_trn_mode_private.yaml  dim_use_elec.yaml  dim_use_hydrogen.yaml  dim_use_liquids.yaml  dim_use_methane.yaml  dimensions.xlsx  dimensions_backup.xlsx
docs/: index.md
tests/: conftest.py  test_compute_version_bump.py  test_excel_diff.py
(+55 files in other folders)
